--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,17 +31,23 @@ dependencies:
   flutter:
     sdk: flutter
 
-  kinde_flutter_sdk: 1.0.1
-  url_launcher: ^6.1.11
+  # Kinde SDK - Updated to latest version 1.1.1
+  kinde_flutter_sdk: ^1.1.1
+
+  # Core dependencies with compatible versions
+  url_launcher: ^6.3.0
   hive: ^2.2.3
-  flutter_secure_storage: ^8.0.0
+  # Note: flutter_secure_storage must be ^8.0.0 as required by kinde_flutter_sdk 1.1.1
+  flutter_secure_storage: ^8.1.0
   jwt_decoder: ^2.0.1
   flutter_dotenv: ^5.1.0
   flutter_screenutil: ^5.9.0
+  # Updated to fix v1 embedding deprecation issues
+  path_provider: ^2.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
@@ -52,14 +58,19 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
+
+# Dependency overrides to ensure compatibility with Flutter 3.35.6 and Dart 3.9.2
+dependency_overrides:
+  # win32 5.0.9 has compatibility issues with Dart 3.9.2
+  # Using a version that's compatible with the latest Dart SDK
+  win32: ^5.5.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
