--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,5 @@
 * @kinde-starter-kits/giants-kinde
+build.gradle @kinde-starter-kits/sdk-engineers
+**/build.gradle @kinde-starter-kits/sdk-engineers
+build.gradle @kinde-starter-kits/sdk-engineers
+**/build.gradle @kinde-starter-kits/sdk-engineers
